--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -486,7 +486,7 @@
     <Compile Include="Persistence\JSONObjectWriter.cs" />
     <Compile Include="Persistence\ObjectComparer.cs" />
     <Compile Include="ReportDistribution.Model\ScheduledFaxSubmission.cs" />
-    <Compile Include="Specimen.Model\EmbeddingInstructions.cs" />
+    <Compile Include="Specimen.Model\EmbeddingInstructionList.cs" />
     <Compile Include="Test.Model\DispalyGroupProstate.cs" />
     <Compile Include="Test.Model\P40.cs" />
     <Compile Include="Test\ALKForNSCLCByFISH\ALKForNSCLCByFISHNegativeWithMonosomyResult.cs" />
