--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -479,6 +479,7 @@
     <Compile Include="PanelSet.Model\PanelSetTCellClonalityByPCRRetired.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Persistence\DocumentCollection.cs" />
     <Compile Include="Persistence\JSONIndenter.cs" />
     <Compile Include="Persistence\JSONObjectStreamWriter.cs" />
     <Compile Include="Persistence\JSONStreamWriter.cs" />
