Make ClientLocationCollection persistent in Client

--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -480,6 +480,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Persistence\AODocumentBuilder.cs" />
+    <Compile Include="Persistence\ClientDocumentBuilder.cs" />
     <Compile Include="Persistence\DocumentBuilder.cs" />
     <Compile Include="Persistence\DocumentCollection.cs" />
     <Compile Include="Persistence\GenericDocumentBuilder.cs" />
