Create ClientSupplyOrderDocumentBuilder, add PullClientSupplyOrder to DocumentGateway

--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -482,6 +482,7 @@
     <Compile Include="Persistence\AODocumentBuilder.cs" />
     <Compile Include="Persistence\ClientDocumentBuilder.cs" />
     <Compile Include="Persistence\ClientOrderDocumentBuilder.cs" />
+    <Compile Include="Persistence\ClientSupplyOrderDocumentBuilder.cs" />
     <Compile Include="Persistence\DocumentBuilder.cs" />
     <Compile Include="Persistence\DocumentCollection.cs" />
     <Compile Include="Persistence\DocumentWriter.cs" />
