--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -708,6 +708,7 @@
     <Compile Include="Test\RASRAFPanel\RASRAFPanelTestOrder.cs" />
     <Compile Include="Test\RASRAFPanel\RASRAFPanelWordDocument.cs" />
     <Compile Include="Test\RASRAFPanel\ResultCollection.cs" />
+    <Compile Include="Test\ROS1ByFISH\ROS1ByFISHQNSResult.cs" />
     <Compile Include="Test\ROS1ByFISH\ROS1ByFISHInconclusiveResult.cs" />
     <Compile Include="Test\ROS1ByFISH\ROS1ByFISHNegativeWithMonosomyResult.cs" />
     <Compile Include="Test\ROS1ByFISH\ROS1ByFISHNegativeWithPolysomyResult.cs" />
@@ -726,6 +727,7 @@
     <Compile Include="Test\ThinPrepPap\AcidWashListItem.cs" />
     <Compile Include="Test\ThinPrepPap\AcidWashList.cs" />
     <Compile Include="Test\Trichomonas\TrichomonasInvalidResult.cs" />
+    <Compile Include="Test\Trisomy21ByFISH\Trisomy21ByFISHTest.cs" />
     <Compile Include="TrackedItemStatusEnum.cs" />
     <Compile Include="Specimen.Model\AliquotCollection.cs" />
     <Compile Include="Specimen.Model\BlockMedium.cs" />
