--- a/UI/UserInterface.csproj
+++ b/UI/UserInterface.csproj
@@ -41,7 +41,7 @@
     <MapFileExtensions>false</MapFileExtensions>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>75</ApplicationRevision>
+    <ApplicationRevision>79</ApplicationRevision>
     <ApplicationVersion>10.1.3.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -181,6 +181,9 @@
     </Compile>
     <Compile Include="AppMessaging\LockReleaseRequestMessageBody.cs" />
     <Compile Include="AppMessaging\LockReleaseResponseMessageBody.cs" />
+    <Compile Include="AppMessaging\LockRequestResponsePage.xaml.cs">
+      <DependentUpon>LockRequestResponsePage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="AppMessaging\MessageBody.cs" />
     <Compile Include="AppMessaging\MessageDirectionEnum.cs" />
     <Compile Include="AppMessaging\MessageQueueCollection.cs" />
@@ -346,8 +349,8 @@
     <Compile Include="Login\Receiving\TumorNucleiPercentageEntryPage.xaml.cs">
       <DependentUpon>TumorNucleiPercentageEntryPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="AppMessaging\MessagingPage.xaml.cs">
-      <DependentUpon>MessagingPage.xaml</DependentUpon>
+    <Compile Include="AppMessaging\LockRequestPage.xaml.cs">
+      <DependentUpon>LockRequestPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="MaterialTracking\MaterialTrackingCasePage.xaml.cs">
       <DependentUpon>MaterialTrackingCasePage.xaml</DependentUpon>
@@ -1823,6 +1826,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="AppMessaging\LockRequestResponsePage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Billing\ClientBillingReportDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -1983,7 +1990,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="AppMessaging\MessagingPage.xaml">
+    <Page Include="AppMessaging\LockRequestPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
