--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="12.0">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -15,7 +15,7 @@
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
     <OldToolsVersion>3.5</OldToolsVersion>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>YellowstonePathology.Business.pfx</AssemblyOriginatorKeyFile>
     <ProjectGuid>{0712F3D4-5C03-4446-B8FE-B8F5BE9495B1}</ProjectGuid>
@@ -46,6 +46,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -56,6 +57,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Mongo|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
@@ -66,6 +68,7 @@
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisFailOnMissingRules>true</CodeAnalysisFailOnMissingRules>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Interop.FAXCOMEXLib, Version=1.0.0.0, Culture=neutral, PublicKeyToken=8aa395087185f434, processorArchitecture=MSIL">
@@ -210,32 +213,6 @@
     <Compile Include="Audit.Model\WHPStandingOrderMismatchAudit.cs" />
     <Compile Include="Audit.Model\WHPStandingOrderNotSetAudit.cs" />
     <Compile Include="Audit.Model\ShouldWomensHealthProfileBeFinaledAudit.cs" />
-    <Compile Include="BarcodeLib\BarcodeCommon.cs" />
-    <Compile Include="BarcodeLib\BarcodeLib.cs" />
-    <Compile Include="BarcodeLib\BarcodeXML.Designer.cs" />
-    <Compile Include="BarcodeLib\IBarcode.cs" />
-    <Compile Include="BarcodeLib\Symbologies\Blank.cs" />
-    <Compile Include="BarcodeLib\Symbologies\Codabar.cs" />
-    <Compile Include="BarcodeLib\Symbologies\Code11.cs" />
-    <Compile Include="BarcodeLib\Symbologies\Code128.cs" />
-    <Compile Include="BarcodeLib\Symbologies\Code39.cs" />
-    <Compile Include="BarcodeLib\Symbologies\Code93.cs" />
-    <Compile Include="BarcodeLib\Symbologies\EAN13.cs" />
-    <Compile Include="BarcodeLib\Symbologies\EAN8.cs" />
-    <Compile Include="BarcodeLib\Symbologies\FIM.cs" />
-    <Compile Include="BarcodeLib\Symbologies\Interleaved2of5.cs" />
-    <Compile Include="BarcodeLib\Symbologies\ISBN.cs" />
-    <Compile Include="BarcodeLib\Symbologies\ITF14.cs" />
-    <Compile Include="BarcodeLib\Symbologies\JAN13.cs" />
-    <Compile Include="BarcodeLib\Symbologies\MSI.cs" />
-    <Compile Include="BarcodeLib\Symbologies\Pharmacode.cs" />
-    <Compile Include="BarcodeLib\Symbologies\Postnet.cs" />
-    <Compile Include="BarcodeLib\Symbologies\Standard2of5.cs" />
-    <Compile Include="BarcodeLib\Symbologies\Telepen.cs" />
-    <Compile Include="BarcodeLib\Symbologies\UPCA.cs" />
-    <Compile Include="BarcodeLib\Symbologies\UPCE.cs" />
-    <Compile Include="BarcodeLib\Symbologies\UPCSupplement2.cs" />
-    <Compile Include="BarcodeLib\Symbologies\UPCSupplement5.cs" />
     <Compile Include="BarcodeScanning\Barcode.cs" />
     <Compile Include="BarcodeScanning\BarcodePrefixEnum.cs" />
     <Compile Include="BarcodeScanning\BarcodeScan.cs" />
@@ -703,11 +680,6 @@
     <Compile Include="Test\PantherOrderListItemNGCT.cs" />
     <Compile Include="Test\PantherOrderListItem.cs" />
     <Compile Include="Test\PDL1\PDL1EpicObxView.cs" />
-    <Compile Include="Test\PDL1\PDL1NegativeResult.cs" />
-    <Compile Include="Test\PDL1\PDL1NoResult.cs" />
-    <Compile Include="Test\PDL1\PDL1PositiveResult.cs" />
-    <Compile Include="Test\PDL1\PDL1Result.cs" />
-    <Compile Include="Test\PDL1\PDL1ResultCollection.cs" />
     <Compile Include="Test\PDL1\PDL1Test.cs" />
     <Compile Include="Test\PDL1\PDL1TestOrder.cs" />
     <Compile Include="Test\PDL1\PDL1WordDocument.cs" />
@@ -2819,17 +2791,6 @@
     <EmbeddedResource Include="XmlSchema\LabEventLogSchema.xsd">
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <None Include="BarcodeLib\BarcodeXML.xsc">
-      <DependentUpon>BarcodeXML.xsd</DependentUpon>
-    </None>
-    <None Include="BarcodeLib\BarcodeXML.xsd">
-      <SubType>Designer</SubType>
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>BarcodeXML1.Designer.cs</LastGenOutput>
-    </None>
-    <None Include="BarcodeLib\BarcodeXML.xss">
-      <DependentUpon>BarcodeXML.xsd</DependentUpon>
-    </None>
     <None Include="YellowstonePathology.Business.pfx" />
     <None Include="YellowstonePathology.Business.snk" />
   </ItemGroup>
